[package]
name = "hello-rust"
version = "0.1.0"
authors = ["ZhuMingYang <332595512@qq.com>"]
edition = "2018"

[workspace]
members = [
    "crates/adder_test",
    "crates/use_mod",
]

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# yew = "0.18"
rand="0.8.5"

[profile.release]
panic = 'abort'
